--- a/compute_Aw_4hole.ipynb
+++ b/compute_Aw_4hole.ipynb
@@ -16,7 +16,7 @@
       "Ni_Cu_orbs =  ['d3z2r2', 'dx2y2']\n",
       "O1_orbs =  ['px']\n",
       "O2_orbs =  ['py']\n",
-      "compute A(w) for symmetries =  ['1A1', '3B1']\n",
+      "compute A(w) for symmetries =  ['1A1', '3B1', '3B1', '1A2', '3A2', '1E', '3E']\n",
       "Mc= 2\n",
       "VS.dim =  4274\n",
       "len(d_Ni_list) 490\n",
@@ -35,9 +35,9 @@
       "start create_edep_diag_matrix\n",
       "=============================\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.11631631851196289 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 0.07878708839416504 seconds ---\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.11965084075927734 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 0.07377505302429199 seconds ---\n",
       "start getting ground state\n",
       "lowest eigenvalue of H from np.linalg.eigsh = \n",
       "[0.97090202 1.25041992 1.33603559 1.85386718 2.1346557  2.47233426\n",
@@ -102,8 +102,8 @@
       "d9Ld8= 0.15119860334851826\n",
       "d8Ld9= 0.09843364711051873\n",
       "d8d8= 0.04279036380873551\n",
-      "--- get_ground_state 0.2892589569091797 seconds ---\n",
-      "--- 6.397974252700806 seconds ---\n"
+      "--- get_ground_state 0.29323554039001465 seconds ---\n",
+      "--- 6.462069034576416 seconds ---\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
     "    Aw_d8_total = np.zeros(len(w_vals))\n",
     "\n",
     "    # set up H0\n",
-    "    if Norb==7:\n",
+    "    if Norb==7 or Norb==4:\n",
     "        tpd_nn_hop_dir, tpd_orbs, tpd_nn_hop_fac, tpp_nn_hop_fac \\\n",
     "                                   = ham.set_tpd_tpp(Norb,tpd,tpp,0,0,0,0)\n",
     "    elif Norb==9 or Norb==11:\n",
@@ -188,7 +188,7 @@
     "        H0_Ni_new = U_Ni_d.dot(H0.dot(U_Ni))  \n",
     "    \n",
     "\n",
-    "    if Norb==7 or Norb==9 or Norb==10 or Norb==11:     \n",
+    "    if Norb==4 or Norb==7 or Norb==9 or Norb==10 or Norb==11:     \n",
     "        Hint_Ni = ham.create_interaction_matrix_ALL_syms(VS,d_Ni_double,p_double,double_Ni_part, idx_Ni, hole34_Ni_part,  \\\n",
     "                                                      S_Ni_val, Sz_Ni_val,AorB_Ni_sym, ACu, ANi, Upp)\n",
     "        Hint_Cu = ham.create_interaction_matrix_ALL_syms(VS,d_Cu_double,p_double,double_Cu_part, idx_Cu, hole34_Cu_part, \\\n",
@@ -294,7 +294,7 @@
     "    # check if U if unitary\n",
     "#     util.checkU_unitary(U_Ni,U_Ni_d)\n",
     "    \n",
-    "    if Norb==7:\n",
+    "    if Norb==7 or Norb==4:\n",
     "        for a in range(0,len(pam.tzs)):\n",
     "            tz = pam.tzs[a] \n",
     "            for tpd in pam.tpds:\n",
