--- a/compute_Aw_4hole.ipynb
+++ b/compute_Aw_4hole.ipynb
@@ -13,17 +13,17 @@
      "text": [
       "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "Ni_Cu_orbs =  ['d3z2r2', 'dx2y2']\n",
+      "Ni_Cu_orbs =  ['d3z2r2', 'dx2y2', 'dxy', 'dxz', 'dyz']\n",
       "O1_orbs =  ['px']\n",
       "O2_orbs =  ['py']\n",
       "compute A(w) for symmetries =  ['1A1', '3B1', '3B1', '1A2', '3A2', '1E', '3E']\n",
       "Mc= 2\n",
-      "VS.dim =  4274\n",
-      "len(d_Ni_list) 490\n",
-      "len(d_Cu_list) 490\n",
-      "len(p_list) 968\n",
-      "len(idx_Ni) 490\n",
-      "len(idx_Cu) 490\n",
+      "VS.dim =  20609\n",
+      "len(d_Ni_list) 5785\n",
+      "len(d_Cu_list) 5785\n",
+      "len(p_list) 2312\n",
+      "len(idx_Ni) 5785\n",
+      "len(idx_Cu) 5785\n",
       "===================================================\n",
       "ANi= 6.0 ACu= 6.0 epCu= 7.0 epNi= 7.0  tpd= 1.3  tpp= 0.55  Upp= 0 tz= 3.0\n",
       "start create_tpd_nn_matrix\n",
@@ -35,75 +35,75 @@
       "start create_edep_diag_matrix\n",
       "=============================\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.07878708839416504 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 2.851072311401367 seconds ---\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.07377505302429199 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 2.8114728927612305 seconds ---\n",
       "start getting ground state\n",
       "lowest eigenvalue of H from np.linalg.eigsh = \n",
-      "[0.97090202 1.25041992 1.33603559 1.85386718 2.1346557  2.47233426\n",
-      " 2.88984455 3.12330139 3.12573797 3.25780375]\n",
-      "0.9709020217731418\n",
+      "[0.94469847 1.21186199 1.30674459 1.68447897 1.81894206 2.11501543\n",
+      " 2.12001068 2.25291375 2.31801588 2.3987527 ]\n",
+      "0.9446984651038773\n",
       "Degeneracy of ground state is  1\n",
-      "eigenvalue =  0.9709020217731418\n",
+      "eigenvalue =  0.9446984651038773\n",
       "Compute the weights in GS (lowest Aw peak)\n",
-      " state  609   dx2y2 dn 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   px up -1 0 1 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.02565280278569895 \n",
+      " state  2913   dx2y2 dn 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   px up -1 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.0255371698446489 \n",
       "\n",
-      " state  620   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 dn 0 0 0   px up -1 0 0 \n",
-      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.025652802785698967 \n",
+      " state  2960   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 dn 0 0 0   px up -1 0 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.02553716984464885 \n",
       "\n",
-      " state  689   dx2y2 dn 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   py up 0 -1 1 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.02565280278569893 \n",
+      " state  4313   dx2y2 dn 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   py up 0 -1 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.025537169844648856 \n",
       "\n",
-      " state  700   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 dn 0 0 0   py up 0 -1 0 \n",
-      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.025652802785699 \n",
+      " state  4360   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 dn 0 0 0   py up 0 -1 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.025537169844648856 \n",
       "\n",
-      " state  729   dx2y2 up 0 0 1   dx2y2 dn 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.020966517945844983 \n",
+      " state  5589   dx2y2 up 0 0 1   dx2y2 dn 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.021645562515925358 \n",
       "\n",
-      " state  732   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 up 0 0 0   dx2y2 dn 0 0 0 \n",
-      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.02096651794584503 \n",
+      " state  5631   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 up 0 0 0   dx2y2 dn 0 0 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.02164556251592539 \n",
       "\n",
-      " state  1588   dx2y2 up 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   py dn 0 1 1 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.025652802785698956 \n",
+      " state  9835   dx2y2 up 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   py dn 0 1 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.025537169844648815 \n",
       "\n",
-      " state  1597   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 up 0 0 0   py dn 0 1 0 \n",
-      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.025652802785699036 \n",
+      " state  9880   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 up 0 0 0   py dn 0 1 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.025537169844648884 \n",
       "\n",
-      " state  2813   dx2y2 up 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   px dn 1 0 1 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.025652802785698887 \n",
+      " state  15554   dx2y2 up 0 0 1   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   px dn 1 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.02553716984464892 \n",
       "\n",
-      " state  2822   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 up 0 0 0   px dn 1 0 0 \n",
-      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.02565280278569893 \n",
+      " state  15599   d3z2r2 up 0 0 1   dx2y2 dn 0 0 1   dx2y2 up 0 0 0   px dn 1 0 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.025537169844648815 \n",
       "\n",
-      "sumweight= 1.0000000000000044\n",
-      "sumweight1= 0.24715545817728166\n",
-      "sumweight2= 0.9994117107112247\n",
-      "sumweight_picture= 0.9989313822647439\n",
-      "LmLn= 0.0009453849044263988\n",
-      "d9Ld10L2= 0.014915939793384935\n",
-      "d9d10L3= 0.000916559642980843\n",
-      "d10L3d9= 0.0009165596429808417\n",
-      "d9L2d10L= 0.009673385204321783\n",
-      "d10Ld9L2= 0.009673385204321776\n",
-      "d10d9L3= 0.00012283684191177348\n",
-      "d10L2d9L= 0.01491593979338493\n",
-      "d8Ld10L= 0.035288086525863085\n",
-      "d10Ld8L= 0.0352880865258631\n",
-      "d8d10L2= 0.02564977390758688\n",
-      "d10d8L2= 0.0033612619502085585\n",
-      "d8L2d10= 0.003361261950208559\n",
-      "d10L2d8= 0.025649773907586854\n",
-      "d9L2d9= 0.04627563103414361\n",
-      "d9d9L2= 0.046275631034143686\n",
-      "d9Ld9L= 0.18457792456834626\n",
-      "d9d8L= 0.09843364711051882\n",
-      "d8d9L= 0.15119860334851848\n",
-      "d9Ld8= 0.15119860334851826\n",
-      "d8Ld9= 0.09843364711051873\n",
-      "d8d8= 0.04279036380873551\n",
-      "--- get_ground_state 0.29323554039001465 seconds ---\n",
-      "--- 6.462069034576416 seconds ---\n"
+      "sumweight= 0.9999999999999853\n",
+      "sumweight1= 0.24758848378904164\n",
+      "sumweight2= 0.9989608217164198\n",
+      "sumweight_picture= 0.9975823248063312\n",
+      "LmLn= 0.0009348368139479156\n",
+      "d9Ld10L2= 0.014768363808344587\n",
+      "d9d10L3= 0.0009037954804704053\n",
+      "d10L3d9= 0.0009037954804704046\n",
+      "d9L2d10L= 0.009537748704340552\n",
+      "d10Ld9L2= 0.009537748704340548\n",
+      "d10d9L3= 0.00012106050262164835\n",
+      "d10L2d9L= 0.014768363808344584\n",
+      "d8Ld10L= 0.034981579675445025\n",
+      "d10Ld8L= 0.03498157967544501\n",
+      "d8d10L2= 0.025385885428416768\n",
+      "d10d8L2= 0.003308375785777394\n",
+      "d8L2d10= 0.0033083757857773925\n",
+      "d10L2d8= 0.025385885428416806\n",
+      "d9L2d9= 0.045661402221804245\n",
+      "d9d9L2= 0.045659956753647514\n",
+      "d9Ld9L= 0.18367515410749574\n",
+      "d9d8L= 0.09821229670800914\n",
+      "d8d9L= 0.152226188359212\n",
+      "d9Ld8= 0.15222618835921212\n",
+      "d8Ld9= 0.0982122967080091\n",
+      "d8d8= 0.04471479113239014\n",
+      "--- get_ground_state 0.8547866344451904 seconds ---\n",
+      "--- 34.857444286346436 seconds ---\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
     "    Aw_d8_total = np.zeros(len(w_vals))\n",
     "\n",
     "    # set up H0\n",
-    "    if Norb==7 or Norb==4:\n",
+    "    if Norb==7:\n",
     "        tpd_nn_hop_dir, tpd_orbs, tpd_nn_hop_fac, tpp_nn_hop_fac \\\n",
     "                                   = ham.set_tpd_tpp(Norb,tpd,tpp,0,0,0,0)\n",
     "    elif Norb==9 or Norb==11:\n",
@@ -188,7 +188,7 @@
     "        H0_Ni_new = U_Ni_d.dot(H0.dot(U_Ni))  \n",
     "    \n",
     "\n",
-    "    if Norb==4 or Norb==7 or Norb==9 or Norb==10 or Norb==11:     \n",
+    "    if Norb==7 or Norb==9 or Norb==10 or Norb==11:     \n",
     "        Hint_Ni = ham.create_interaction_matrix_ALL_syms(VS,d_Ni_double,p_double,double_Ni_part, idx_Ni, hole34_Ni_part,  \\\n",
     "                                                      S_Ni_val, Sz_Ni_val,AorB_Ni_sym, ACu, ANi, Upp)\n",
     "        Hint_Cu = ham.create_interaction_matrix_ALL_syms(VS,d_Cu_double,p_double,double_Cu_part, idx_Cu, hole34_Cu_part, \\\n",
@@ -294,7 +294,7 @@
     "    # check if U if unitary\n",
     "#     util.checkU_unitary(U_Ni,U_Ni_d)\n",
     "    \n",
-    "    if Norb==7 or Norb==4:\n",
+    "    if Norb==7:\n",
     "        for a in range(0,len(pam.tzs)):\n",
     "            tz = pam.tzs[a] \n",
     "            for tpd in pam.tpds:\n",
