vs order: distibute tza1 tzb1;correct  all state

--- a/compute_Aw_4hole.ipynb
+++ b/compute_Aw_4hole.ipynb
@@ -19,15 +19,16 @@
       "O2_orbs =  ['py']\n",
       "compute A(w) for symmetries =  ['1A1', '3B1', '3B1', '1A2', '3A2', '1E', '3E']\n",
       "Mc= 2\n",
-      "VS.dim =  14772\n",
-      "len(d_Ni_list) 1386\n",
-      "len(d_Cu_list) 1386\n",
-      "len(p_list) 2208\n",
-      "len(s_list) 66\n",
-      "len(idx_Ni) 1386\n",
-      "len(idx_Cu) 1386\n",
+      "VS.dim =  5994\n",
+      "len(d_Ni_list) 594\n",
+      "len(d_Cu_list) 594\n",
+      "len(p_list) 1152\n",
+      "len(s_list) 36\n",
+      "len(idx_Ni) 594\n",
+      "len(idx_Cu) 594\n",
+      "basis 4.421170711517334 seconds ---\n",
       "===================================================\n",
-      "ANi= 6.0 ACu= 6.0 epCu= 7.0 epNi= 7.0  tpd= 1.3  tpp= 0.55  Upp= 0  Uss= 0\n",
+      "ANi= 6.0 ACu= 6.0 epCu= 4.7 epNi= 4.7  tpd= 1.3  tpp= 0.5  Upp= 0  Uss= 0\n",
       "start create_tpd_nn_matrix\n",
       "==========================\n",
       "start create_tpp_nn_matrix\n",
@@ -41,99 +42,78 @@
       "start create_edep_diag_matrix\n",
       "=============================\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.20508289337158203 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 0.08776426315307617 seconds ---\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.20305085182189941 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 0.08676910400390625 seconds ---\n",
       "start getting ground state\n",
       "lowest eigenvalue of H from np.linalg.eigsh = \n",
-      "[0.61214586 0.6569426  0.6569426  0.6569426  2.12282379 2.12282379\n",
-      " 2.12282379 2.12282379 2.12282379 2.22239482]\n",
-      "0.6121458634442776\n",
+      "[-0.27118047 -0.22793407  0.00691185  0.00691185  0.26109028  0.34197023\n",
+      "  0.34197023  0.64886188  0.8322197   0.86296108]\n",
+      "-0.2711804693697454\n",
       "Degeneracy of ground state is  1\n",
-      "eigenvalue =  0.6121458634442776\n",
+      "eigenvalue =  -0.2711804693697454\n",
       "Compute the weights in GS (lowest Aw peak)\n",
-      " state  799   dx2y2 dn 0 0 2   dx2y2 dn 0 0 0   px up -1 0 2   px up -1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.609211318055636e-05 \n",
+      " state  4660   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 -1 2   px dn 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028536e-05 \n",
       "\n",
-      " state  1351   dx2y2 dn 0 0 2   dx2y2 dn 0 0 0   px up -1 0 2   py up 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180557097e-05 \n",
+      " state  5502   dx2y2 dn 0 0 2   py up 0 -1 2   py dn 0 1 0   px up 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.050500487302853e-05 \n",
       "\n",
-      " state  1367   dx2y2 dn 0 0 2   dx2y2 dn 0 0 0   py up 0 -1 2   px up -1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556822e-05 \n",
+      " state  5196   dx2y2 up 0 0 0   py up 0 -1 2   px dn 1 0 2   px dn 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.050500487302853e-05 \n",
       "\n",
-      " state  1789   dx2y2 dn 0 0 2   dx2y2 dn 0 0 0   py up 0 -1 2   py up 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.609211318055658e-05 \n",
+      " state  2819   dx2y2 dn 0 0 2   py up 0 -1 2   px up -1 0 0   py dn 0 1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028458e-05 \n",
       "\n",
-      " state  4735   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.609211318055692e-05 \n",
+      " state  5434   dx2y2 dn 0 0 2   px up -1 0 2   py up 0 1 0   px dn 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028387e-05 \n",
       "\n",
-      " state  4765   dx2y2 up 0 0 2   dx2y2 dn 0 0 0   py dn 0 1 2   px up -1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556707e-05 \n",
+      " state  3867   dx2y2 up 0 0 0   py up 0 1 2   px dn 1 0 2   py dn 0 1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.050500487302822e-05 \n",
       "\n",
-      " state  5455   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   py up 0 -1 2   py dn 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.609211318055668e-05 \n",
+      " state  4394   dx2y2 dn 0 0 2   px up -1 0 2   py dn 0 -1 0   px up 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028143e-05 \n",
       "\n",
-      " state  5485   dx2y2 up 0 0 2   dx2y2 dn 0 0 0   py dn 0 1 2   py up 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556565e-05 \n",
+      " state  1469   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 1 2   py dn 0 -1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028065e-05 \n",
       "\n",
-      " state  6995   dx2y2 up 0 0 2   dx2y2 up 0 0 0   py dn 0 1 2   py dn 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.609211318055658e-05 \n",
+      " state  370   dx2y2 dn 0 0 2   px up -1 0 2   px up -1 0 0   py dn 0 -1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028065e-05 \n",
       "\n",
-      " state  8958   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   px up -1 0 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556307e-05 \n",
-      "\n",
-      " state  8988   dx2y2 up 0 0 2   dx2y2 dn 0 0 0   px dn 1 0 2   px up -1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556273e-05 \n",
-      "\n",
-      " state  9678   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   py up 0 -1 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556653e-05 \n",
-      "\n",
-      " state  9708   dx2y2 up 0 0 2   dx2y2 dn 0 0 0   px dn 1 0 2   py up 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180557205e-05 \n",
-      "\n",
-      " state  12576   dx2y2 up 0 0 2   dx2y2 up 0 0 0   py dn 0 1 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556646e-05 \n",
-      "\n",
-      " state  12600   dx2y2 up 0 0 2   dx2y2 up 0 0 0   px dn 1 0 2   py dn 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.609211318055702e-05 \n",
-      "\n",
-      " state  14114   dx2y2 up 0 0 2   dx2y2 up 0 0 0   px dn 1 0 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.6092113180556476e-05 \n",
-      "\n",
-      "sumweight= 0.9999999999999871\n",
-      "sumweight1= 0.0\n",
-      "211= 0.008992623032114037\n",
-      "ddss= 0.17209233594207357\n",
-      "ddsp= 0.22757490340228223\n",
-      "dssp= 0.06667282904300423\n",
-      "dspp= 0.04786087882445488\n",
-      "ddds= 0.2319077165099869\n",
-      "sumweight2= 0.24489871324607432\n",
-      "sumweight_picture= 0.24489871324607432\n",
-      "LmLn= 0.0002698803860236587\n",
-      "d9Ld10L2= 0.002321991362009801\n",
-      "d9d10L3= 0.00033547111493889407\n",
-      "d10L3d9= 0.0003354711149388947\n",
-      "d9L2d10L= 0.000860864119702101\n",
-      "d10Ld9L2= 0.0008608641197020988\n",
-      "d10d9L3= 1.8038862370130317e-33\n",
-      "d10L2d9L= 0.0023219913620097987\n",
-      "d8Ld10L= 0.0015303487352365714\n",
-      "d10Ld8L= 0.0015303487352365682\n",
-      "d8d10L2= 0.003257661768426864\n",
-      "d10d8L2= 1.3132606713783997e-33\n",
-      "d8L2d10= 1.4738186807692512e-33\n",
-      "d10L2d8= 0.0032576617684268627\n",
-      "d9L2d9= 0.005406102625739432\n",
-      "d9d9L2= 0.00540610262573942\n",
-      "d9Ld9L= 0.03375681620594917\n",
-      "d9d8L= 0.009509745229681477\n",
-      "d8d9L= 0.04791337685262053\n",
-      "d9Ld8= 0.04791337685262051\n",
-      "d8Ld9= 0.0095097452296815\n",
-      "d8d8= 0.06860089303739016\n",
-      "--- get_ground_state 0.8702065944671631 seconds ---\n",
-      "--- 24.18087649345398 seconds ---\n"
+      "sumweight= 1.0000000000000135\n",
+      "sumweight1= 0.17768878446528025\n",
+      "211= 0.020936808019850858\n",
+      "ddss= 0.06215778605954868\n",
+      "ddsp= 0.23271880363275702\n",
+      "dssp= 0.05131655150501022\n",
+      "dspp= 0.09933567568687268\n",
+      "ddds= 0.10867654517450201\n",
+      "sumweight2= 0.4248578299214621\n",
+      "sumweight_picture= 0.4248578299214625\n",
+      "LmLn= 0.0027692411046154456\n",
+      "d9Ld10L2= 0.013675196610423617\n",
+      "d9d10L3= 0.0016794799429073748\n",
+      "d10L3d9= 0.0016794799429073754\n",
+      "d9L2d10L= 0.00424626063608116\n",
+      "d10Ld9L2= 0.0042462606360811625\n",
+      "d10d9L3= 2.935097459400316e-33\n",
+      "d10L2d9L= 0.013675196610423603\n",
+      "d8Ld10L= 0.00343247083395564\n",
+      "d10Ld8L= 0.0034324708339556415\n",
+      "d8d10L2= 0.008814771959729064\n",
+      "d10d8L2= 1.4996033575581714e-33\n",
+      "d8L2d10= 1.6628173494716653e-33\n",
+      "d10L2d8= 0.008814771959729063\n",
+      "d9L2d9= 0.01449905969938102\n",
+      "d9d9L2= 0.01449905969938104\n",
+      "d9Ld9L= 0.11021058474555534\n",
+      "d9d8L= 0.012005293076846182\n",
+      "d8d9L= 0.07291669084310341\n",
+      "d9Ld8= 0.07291669084310341\n",
+      "d8Ld9= 0.012005293076846169\n",
+      "d8d8= 0.04933955686643678\n",
+      "--- get_ground_state 0.3430819511413574 seconds ---\n",
+      "--- 9.096635103225708 seconds ---\n"
      ]
     }
    ],
@@ -168,7 +148,7 @@
     "M_PI = math.pi\n",
     "                  \n",
     "#####################################\n",
-    "def compute_Aw_main(ANi,ACu,epCu,epNi,es,tpd,tpp,tds,tps,tz,pds,pdp,pps,ppp,Upp,\\\n",
+    "def compute_Aw_main(ANi,ACu,epCu,epNi,es,tpd,tpp,tds,tps,tza1,tzb1,pds,pdp,pps,ppp,Upp,\\\n",
     "                    d_Ni_double,d_Cu_double,p_double,s_double,double_Ni_part,hole34_Ni_part, double_Cu_part,\\\n",
     "                    hole34_Cu_part, idx_Ni,idx_Cu, U_Ni, \\\n",
     "                    S_Ni_val, Sz_Ni_val, AorB_Ni_sym, \\\n",
@@ -204,7 +184,7 @@
     "    \n",
     "#     tz_fac = ham.set_tz(Norb,if_tz_exist,tz)\n",
     "    \n",
-    "    tz_fac = ham.set_tz(Norb,if_tz_exist,tz)\n",
+    "    tz_fac = ham.set_tz(Norb,if_tz_exist,tza1,tzb1)\n",
     "    \n",
     "    \n",
     "    T_pd   = ham.create_tpd_nn_matrix(VS,tpd_nn_hop_dir, tpd_orbs, tpd_nn_hop_fac)\n",
@@ -318,12 +298,21 @@
     "    p_double, s_double = ham.get_double_occu_list(VS)\n",
     "    \n",
     "    # change the basis for d_double states to be singlet/triplet\n",
-    "    U_Ni,S_Ni_val, Sz_Ni_val, AorB_Ni_sym,\\\n",
-    "                                    =  basis.create_singlet_triplet_basis_change_matrix \\\n",
-    "                                    (VS, double_Ni_part, idx_Ni, hole34_Ni_part,d_Ni_double, d_Cu_double, 'Ni')\n",
-    "    U_Cu,S_Cu_val, Sz_Cu_val, AorB_Cu_sym,\\\n",
-    "                                    =  basis.create_singlet_triplet_basis_change_matrix \\\n",
-    "                                    (VS, double_Cu_part, idx_Cu, hole34_Cu_part,d_Ni_double, d_Cu_double, 'Cu')\n",
+    "    if pam.basis_change_type =='all_states':\n",
+    "        U_Ni,S_Ni_val, Sz_Ni_val, AorB_Ni_sym,\\\n",
+    "                                        =  basis.create_singlet_triplet_basis_change_matrix \\\n",
+    "                                        (VS, double_Ni_part, idx_Ni, hole34_Ni_part,d_Ni_double, d_Cu_double, 'Ni')\n",
+    "        U_Cu,S_Cu_val, Sz_Cu_val, AorB_Cu_sym,\\\n",
+    "                                        =  basis.create_singlet_triplet_basis_change_matrix \\\n",
+    "                                        (VS, double_Cu_part, idx_Cu, hole34_Cu_part,d_Ni_double, d_Cu_double, 'Cu')\n",
+    "\n",
+    "    if pam.basis_change_type =='d_double':\n",
+    "        U_Ni,S_Ni_val, Sz_Ni_val, AorB_Ni_sym,\\\n",
+    "                     =  basis.create_singlet_triplet_basis_change_matrix_d_double(VS, d_Ni_double, double_Ni_part, idx_Ni, hole34_Ni_part)\n",
+    "        U_Cu,S_Cu_val, Sz_Cu_val, AorB_Cu_sym,\\\n",
+    "                     =  basis.create_singlet_triplet_basis_change_matrix_d_double(VS, d_Cu_double, double_Cu_part, idx_Cu, hole34_Cu_part)    \n",
+    "    print(\"basis %s seconds ---\" % (time.time() - start_time))    \n",
+    "        \n",
     "        \n",
     "    if pam.if_print_VS_after_basis_change==1:\n",
     "        basis.print_VS_after_basis_change(VS,S_val,Sz_val)\n",
@@ -345,44 +334,45 @@
     "                    for epCu in pam.epCus:\n",
     "                        for epNi in pam.epNis:   \n",
     "                            for es in pam.ess: \n",
-    "                                for tz in pam.tzs:\n",
-    "                                    for ANi in pam.ANis:\n",
-    "                                        for ACu in pam.ACus:\n",
-    "                #                            util.get_atomic_d8_energy(ANi,B,C)\n",
-    "                                            for tpp in pam.tpps:\n",
-    "                                                for Upp in pam.Upps:\n",
-    "                                                    for Uss in pam.Upps:                    \n",
-    "                                                        print ('===================================================')\n",
-    "                                                        print ('ANi=',ANi, 'ACu=',ACu,'epCu=', epCu, 'epNi=',epNi,\\\n",
-    "                                                               ' tpd=',tpd,' tpp=',tpp,' Upp=',Upp,' Uss=',Uss)\n",
+    "                                for tza1 in pam.tza1s:\n",
+    "                                    for tzb1 in pam.tzb1s:\n",
+    "                                        for ANi in pam.ANis:\n",
+    "                                            for ACu in pam.ACus:\n",
+    "                    #                            util.get_atomic_d8_energy(ANi,B,C)\n",
+    "                                                for tpp in pam.tpps:\n",
+    "                                                    for Upp in pam.Upps:\n",
+    "                                                        for Uss in pam.Upps:                    \n",
+    "                                                            print ('===================================================')\n",
+    "                                                            print ('ANi=',ANi, 'ACu=',ACu,'epCu=', epCu, 'epNi=',epNi,\\\n",
+    "                                                                   ' tpd=',tpd,' tpp=',tpp,' Upp=',Upp,' Uss=',Uss)\n",
     "\n",
-    "                                                        compute_Aw_main(ANi,ACu,epCu,epNi,es,tpd,tpp,tds,tps,tz,0,0,0,0,Upp,\\\n",
-    "                                                                        d_Ni_double,d_Cu_double,p_double,s_double,double_Ni_part,hole34_Ni_part,\\\n",
-    "                                                                        double_Cu_part,hole34_Cu_part, idx_Ni,idx_Cu, \\\n",
-    "                                                                        U_Ni, S_Ni_val, Sz_Ni_val, AorB_Ni_sym ,U_Cu, \\\n",
-    "                                                                        S_Cu_val, Sz_Cu_val, AorB_Cu_sym)  \n",
+    "                                                            compute_Aw_main(ANi,ACu,epCu,epNi,es,tpd,tpp,tds,tps,tza1,tzb1,0,0,0,0,Upp,\\\n",
+    "                                                                            d_Ni_double,d_Cu_double,p_double,s_double,double_Ni_part,hole34_Ni_part,\\\n",
+    "                                                                            double_Cu_part,hole34_Cu_part, idx_Ni,idx_Cu, \\\n",
+    "                                                                            U_Ni, S_Ni_val, Sz_Ni_val, AorB_Ni_sym ,U_Cu, \\\n",
+    "                                                                            S_Cu_val, Sz_Cu_val, AorB_Cu_sym)  \n",
     "    elif Norb==10 or Norb==11 or Norb==12:\n",
     "        pps = pam.pps\n",
     "        ppp = pam.ppp\n",
-    "        for a in range(0,len(pam.tzs)):\n",
-    "            tz = pam.tzs[a]                                        \n",
-    "            for ii in range(0,len(pam.pdps)):\n",
-    "                pds = pam.pdss[ii]\n",
-    "                pdp = pam.pdps[ii]\n",
-    "                for epCu in pam.epCus:\n",
-    "                    for epNi in pam.epNis:\n",
-    "                        for ANi in pam.ANis: \n",
-    "                            for ACu in pam.ACus:\n",
-    "    #                         util.get_atomic_d8_energy(ANi,B,C)\n",
-    "                                for Upp in pam.Upps:\n",
-    "                                    print ('===================================================')\n",
-    "                                    print ('ANi=',ANi, 'ACu=',ACu,'epCu=',epCu, 'epNi=',epNi,' pds=',pds,\\\n",
-    "                                           ' pdp=',pdp,' pps=',pps,' ppp=',ppp,' Upp=',Upp,'tz=',tz)\n",
-    "                                    compute_Aw_main(ANi,ACu,epCu,epNi,es,0,0,tz,pds,pdp,pps,ppp,Upp,\\\n",
-    "                                                   d_Ni_double,d_Cu_double,p_double,double_Ni_part,hole34_Ni_part,\\\n",
-    "                                                   double_Cu_part,hole34_Cu_part,idx_Ni,idx_Cu,\\\n",
-    "                                                   U_Ni, S_Ni_val, Sz_Ni_val, AorB_Ni_sym ,U_Cu, \\\n",
-    "                                                    S_Cu_val, Sz_Cu_val, AorB_Cu_sym) \n",
+    "        for tza1 in pam.tza1s:\n",
+    "            for tzb1 in pam.tzb1s:                        \n",
+    "                for ii in range(0,len(pam.pdps)):\n",
+    "                    pds = pam.pdss[ii]\n",
+    "                    pdp = pam.pdps[ii]\n",
+    "                    for epCu in pam.epCus:\n",
+    "                        for epNi in pam.epNis:\n",
+    "                            for ANi in pam.ANis: \n",
+    "                                for ACu in pam.ACus:\n",
+    "        #                         util.get_atomic_d8_energy(ANi,B,C)\n",
+    "                                    for Upp in pam.Upps:\n",
+    "                                        print ('===================================================')\n",
+    "                                        print ('ANi=',ANi, 'ACu=',ACu,'epCu=',epCu, 'epNi=',epNi,' pds=',pds,\\\n",
+    "                                               ' pdp=',pdp,' pps=',pps,' ppp=',ppp,' Upp=',Upp,'tz=',tz)\n",
+    "                                        compute_Aw_main(ANi,ACu,epCu,epNi,es,0,0,tz,pds,pdp,pps,ppp,Upp,\\\n",
+    "                                                       d_Ni_double,d_Cu_double,p_double,double_Ni_part,hole34_Ni_part,\\\n",
+    "                                                       double_Cu_part,hole34_Cu_part,idx_Ni,idx_Cu,\\\n",
+    "                                                       U_Ni, S_Ni_val, Sz_Ni_val, AorB_Ni_sym ,U_Cu, \\\n",
+    "                                                        S_Cu_val, Sz_Cu_val, AorB_Cu_sym) \n",
     "\n",
     "                        \n",
     "    print(\"--- %s seconds ---\" % (time.time() - start_time))"
