--- a/compute_Aw_4hole.ipynb
+++ b/compute_Aw_4hole.ipynb
@@ -26,7 +26,7 @@
       "len(s_list) 36\n",
       "len(idx_Ni) 594\n",
       "len(idx_Cu) 594\n",
-      "basis 4.421170711517334 seconds ---\n",
+      "basis 4.416184425354004 seconds ---\n",
       "===================================================\n",
       "ANi= 6.0 ACu= 6.0 epCu= 4.7 epNi= 4.7  tpd= 1.3  tpp= 0.5  Upp= 0  Uss= 0\n",
       "start create_tpd_nn_matrix\n",
@@ -42,78 +42,90 @@
       "start create_edep_diag_matrix\n",
       "=============================\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.08776426315307617 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 0.08976101875305176 seconds ---\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.08676910400390625 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 0.09078526496887207 seconds ---\n",
       "start getting ground state\n",
       "lowest eigenvalue of H from np.linalg.eigsh = \n",
-      "[-0.27118047 -0.22793407  0.00691185  0.00691185  0.26109028  0.34197023\n",
-      "  0.34197023  0.64886188  0.8322197   0.86296108]\n",
-      "-0.2711804693697454\n",
+      "[-2.22973907 -2.15760486 -1.85823683 -1.58853619 -1.58853619 -1.10623256\n",
+      " -0.98523411 -0.83347914 -0.81235985 -0.81235985]\n",
+      "-2.229739072245787\n",
       "Degeneracy of ground state is  1\n",
-      "eigenvalue =  -0.2711804693697454\n",
+      "eigenvalue =  -2.229739072245787\n",
       "Compute the weights in GS (lowest Aw peak)\n",
-      " state  4660   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 -1 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028536e-05 \n",
+      " state  5734   dx2y2 up 0 0 2   px dn 1 0 2   py dn 0 1 0   px up 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667864e-05 \n",
       "\n",
-      " state  5502   dx2y2 dn 0 0 2   py up 0 -1 2   py dn 0 1 0   px up 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.050500487302853e-05 \n",
+      " state  4411   dx2y2 up 0 0 2   py dn 0 -1 2   py up 0 -1 0   px dn 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667864e-05 \n",
       "\n",
-      " state  5196   dx2y2 up 0 0 0   py up 0 -1 2   px dn 1 0 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.050500487302853e-05 \n",
+      " state  372   dx2y2 dn 0 0 2   px up -1 0 2   px dn -1 0 0   py up 0 -1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667864e-05 \n",
       "\n",
-      " state  2819   dx2y2 dn 0 0 2   py up 0 -1 2   px up -1 0 0   py dn 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028458e-05 \n",
+      " state  5251   dx2y2 up 0 0 0   py dn 0 1 2   px up 1 0 2   px dn 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
       "\n",
-      " state  5434   dx2y2 dn 0 0 2   px up -1 0 2   py up 0 1 0   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028387e-05 \n",
+      " state  5503   dx2y2 up 0 0 2   py dn 0 -1 2   py dn 0 1 0   px up 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
       "\n",
-      " state  3867   dx2y2 up 0 0 0   py up 0 1 2   px dn 1 0 2   py dn 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.050500487302822e-05 \n",
+      " state  887   dx2y2 dn 0 0 0   px up -1 0 2   py dn 0 -1 2   px up -1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
       "\n",
-      " state  4394   dx2y2 dn 0 0 2   px up -1 0 2   py dn 0 -1 0   px up 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028143e-05 \n",
+      " state  1280   dx2y2 up 0 0 0   px dn -1 0 2   py up 0 -1 2   py dn 0 -1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
       "\n",
-      " state  1469   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 1 2   py dn 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028065e-05 \n",
+      " state  5100   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 1 2   px dn 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667805e-05 \n",
       "\n",
-      " state  370   dx2y2 dn 0 0 2   px up -1 0 2   px up -1 0 0   py dn 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  2.0505004873028065e-05 \n",
+      " state  4412   dx2y2 dn 0 0 2   py up 0 -1 2   py dn 0 -1 0   px up 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.06093472486678e-05 \n",
       "\n",
-      "sumweight= 1.0000000000000135\n",
-      "sumweight1= 0.17768878446528025\n",
-      "211= 0.020936808019850858\n",
-      "ddss= 0.06215778605954868\n",
-      "ddsp= 0.23271880363275702\n",
-      "dssp= 0.05131655150501022\n",
-      "dspp= 0.09933567568687268\n",
-      "ddds= 0.10867654517450201\n",
-      "sumweight2= 0.4248578299214621\n",
-      "sumweight_picture= 0.4248578299214625\n",
-      "LmLn= 0.0027692411046154456\n",
-      "d9Ld10L2= 0.013675196610423617\n",
-      "d9d10L3= 0.0016794799429073748\n",
-      "d10L3d9= 0.0016794799429073754\n",
-      "d9L2d10L= 0.00424626063608116\n",
-      "d10Ld9L2= 0.0042462606360811625\n",
-      "d10d9L3= 2.935097459400316e-33\n",
-      "d10L2d9L= 0.013675196610423603\n",
-      "d8Ld10L= 0.00343247083395564\n",
-      "d10Ld8L= 0.0034324708339556415\n",
-      "d8d10L2= 0.008814771959729064\n",
-      "d10d8L2= 1.4996033575581714e-33\n",
-      "d8L2d10= 1.6628173494716653e-33\n",
-      "d10L2d8= 0.008814771959729063\n",
-      "d9L2d9= 0.01449905969938102\n",
-      "d9d9L2= 0.01449905969938104\n",
-      "d9Ld9L= 0.11021058474555534\n",
-      "d9d8L= 0.012005293076846182\n",
-      "d8d9L= 0.07291669084310341\n",
-      "d9Ld8= 0.07291669084310341\n",
-      "d8Ld9= 0.012005293076846169\n",
-      "d8d8= 0.04933955686643678\n",
-      "--- get_ground_state 0.3430819511413574 seconds ---\n",
-      "--- 9.096635103225708 seconds ---\n"
+      " state  5437   dx2y2 up 0 0 2   px dn -1 0 2   py dn 0 1 0   px up 1 0 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.06093472486678e-05 \n",
+      "\n",
+      " state  2887   dx2y2 up 0 0 2   py dn 0 1 2   px dn -1 0 0   py up 0 1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667796e-05 \n",
+      "\n",
+      " state  2803   dx2y2 dn 0 0 2   px up -1 0 2   px dn -1 0 0   py up 0 1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667791e-05 \n",
+      "\n",
+      " state  373   dx2y2 up 0 0 2   px dn -1 0 2   px dn -1 0 0   py up 0 -1 0 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667791e-05 \n",
+      "\n",
+      "sumweight= 1.0000000000000284\n",
+      "sumweight1= 0.37545267523850173\n",
+      "211= 0.006534435196203858\n",
+      "ddss= 0.029134168795170216\n",
+      "ddsp= 0.1407212014917119\n",
+      "dssp= 0.019358637735294646\n",
+      "dspp= 0.04137869395994835\n",
+      "ddds= 0.1357147900269992\n",
+      "sumweight2= 0.627158072794673\n",
+      "sumweight_picture= 0.6271580727946723\n",
+      "LmLn= 0.0009142460400232269\n",
+      "d9Ld10L2= 0.0073639500819362574\n",
+      "d9d10L3= 0.00040621342239497614\n",
+      "d10L3d9= 0.00040621342239497647\n",
+      "d9L2d10L= 0.0012179712979345624\n",
+      "d10Ld9L2= 0.0012179712979345616\n",
+      "d10d9L3= 7.715258165422656e-34\n",
+      "d10L2d9L= 0.0073639500819362505\n",
+      "d8Ld10L= 0.0019058880655216165\n",
+      "d10Ld8L= 0.0019058880655216162\n",
+      "d8d10L2= 0.011587416799692945\n",
+      "d10d8L2= 5.205464464027216e-34\n",
+      "d8L2d10= 1.5049626409750405e-33\n",
+      "d10L2d8= 0.011587416799692942\n",
+      "d9L2d9= 0.0043270547204444605\n",
+      "d9d9L2= 0.0043270547204444605\n",
+      "d9Ld9L= 0.08205274119301853\n",
+      "d9d8L= 0.006842301224169634\n",
+      "d8d9L= 0.13163749406432954\n",
+      "d9Ld8= 0.13163749406432945\n",
+      "d8Ld9= 0.006842301224169639\n",
+      "d8d8= 0.21361450620878294\n",
+      "--- get_ground_state 0.3316071033477783 seconds ---\n",
+      "--- 9.088180780410767 seconds ---\n"
      ]
     }
    ],
